refactor: 兼容模板市场不同的文件上传方式，防止未获取模板情况